--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,6 +7,15 @@
   min-height: 100vh;
 }
 
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
